--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 title: Your awesome title
 author: GitHub User
-email: your-email@domain.com
+email: myemail@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
+  This blog is all about the beneficial plants on my homestead.
+  It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
 # social links
-twitter_username: your-twitter-handle
-github_username:  your-github-handle
+twitter_username: mytwitterhandle
+github_username:  cjoliva
 
 show_excerpts: true # set to false to remove excerpts on the homepage
 
-theme: jekyll-theme-minimal
+theme: minima
